Add field in datasource resource revision for linked service
