# docs/openapi.json
@@ -7,7 +7,7 @@
       "name": "Apache 2.0",
       "url": "https://www.apache.org/licenses/LICENSE-2.0"
     },
-    "version": "v5.0.0+u122"
+    "version": "v5.0.0+u123"
   },
   "externalDocs": {
     "description": "resource-catalogue Documentation",
@@ -6332,6 +6332,10 @@
             "description": "Private"
           },
           "originalId": {
+            "type": "string",
+            "description": "Private"
+          },
+          "linkedServiceRevisionId": {
             "type": "string",
             "description": "Private"
           },
